--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <label>Last Name :</label>
         <input type="text" id="lName">
         <!-- set button onClick method to call function we defined passing input values as parameters -->
-        <button type="button" onclick="callAPI(document.getElementById('fName').value,document.getElementById('lName').value)">SEND</button>
+        <button type="button" onclick="callAPI(document.getElementById('fName').value,document.getElementById('lName').value)">Click here</button>
     </form>
 </body>
 </html>
