--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   
+    <link rel="stylesheet" href="styles.css">
     <!-- Add some CSS to change client UI -->
-    <style>
+<!--     <style>
     body {
         background-color: #232F3E;
         }
@@ -20,7 +22,7 @@
         font-size: 20px;
         margin-left: 20px;
         }
-    </style>
+    </style> -->
     <script>
         // define the callAPI function that takes a first name and last name as parameters
         var callAPI = (firstName,lastName)=>{
@@ -46,13 +48,23 @@
     </script>
 </head>
 <body>
-    <form>
-        <label>First Name :</label>
-        <input type="text" id="fName">
-        <label>Last Name :</label>
-        <input type="text" id="lName">
-        <!-- set button onClick method to call function we defined passing input values as parameters -->
-        <button type="button" onclick="callAPI(document.getElementById('fName').value,document.getElementById('lName').value)">Click here</button>
-    </form>
+    <div>
+        <div class="row">
+            <div class="col-5">
+                <img src="Jiminyumbrella.jpg" width="60%">
+            </div>
+            <div class="col">
+                 <form>
+                    <label for="fName" class="form-label">First Name :</label>
+                    <input type="text" id="fName">
+                    <label for="lName" class="form-label">Last Name :</label>
+                    <input type="text" id="lName">
+                    <!-- set button onClick method to call function we defined passing input values as parameters -->
+                    <button type="button" class="btn btn-primary" onclick="callAPI(document.getElementById('fName').value,document.getElementById('lName').value)">Click here</button>
+                </form>
+            </div>
+        </div>
+    </div>
+   
 </body>
 </html>
